----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-05-17 Olivier Mueller <om@omnis.ch>
    * server_privileges.php, libraries/server_privileges.js: RFE #1197482,
      password generator on user creation.  RFC: ok like that?  TODO: add strings.

2005-05-15 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php, libraries/sqlparser.lib.php: bug #1120434, comment at the end
      of query is applied to appended LIMIT as well

2005-05-13 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_printview.php: bug #1178760, header not sent when displaying
      print view of multi tables, thanks to Hrvoje Novosel - interghost 
    * libraries/functions.js: Patch #1191447, hand pointer on mouseover and
      mousedown, thanks to Ken Stanley - eclipsboi

2005-05-11 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties.inc.php: bug #1069012, table collation forgotten
      when adding fields
    * libraries/storage_engines.lib.php: bug 1180119, undefined variable when
      showing the details of a storage engine under MySQL 4.0.x

2005-05-10 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug #1198156, undefined variable
      when exporting without enclosing with backquotes

2005-05-08 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_links.php: patch #1196806, add a Privileges tab
      in db view, thanks to Herman van Rink - helmo
    * server_privileges.php: add a back link to the db on which
      we are checking privileges
    * Documentation.html: FAQ 3.13 about the MySQL API having problem dealing
      with USE followed with a db name containing an hyphen
    * read_dump.php: bug #1189664, js error when 2 queries submitted at once

2005-05-08 Olivier Mueller <om@omnis.ch>
    * scripts/upgrade.pl: new script to let unix admins upgrade phpMyadmin
      with one command and 5 seconds. To be improved, but is working fine