@@ -556,8 +556,8 @@ function PMA_displayLoginInformationFields($mode = 'new', $indent = 0)
        . $spaces . '        </label>' . "\n"
        . $spaces . '    </td>' . "\n"
        . $spaces . '    <td bgcolor="' . $cfg['BgcolorTwo'] . '">' . "\n"
-       . $spaces . '        <input type="button" value="Generate" onClick="suggestPassword(\'usersForm\', \'generated_pw\')">' . "\n"
-       . $spaces . '        <input type="button" value="Copy" onClick="suggestPasswordCopy(\'usersForm\')">' . "\n"
+       . $spaces . '        <input type="button" value="Generate" onClick="suggestPassword(this.form, \'generated_pw\')">' . "\n"
+       . $spaces . '        <input type="button" value="Copy" onClick="suggestPasswordCopy(this.form)">' . "\n"
        . $spaces . '        &nbsp;</td>' . "\n"
        . $spaces . '    <td bgcolor="' . $cfg['BgcolorTwo'] . '">' . "\n"
        . $spaces . '        <input type="text" name="generated_pw" id="generated_pw" class="textfield"/>' . "\n"
